update notebooks 6 and 7

--- a/python/notebooks/06_Computing_Bev_Gap_w_latest_data.ipynb
+++ b/python/notebooks/06_Computing_Bev_Gap_w_latest_data.ipynb
@@ -151,16 +151,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = recession.plot(color='grey',  linewidth=1, alpha=.6, figsize=(9,6),legend=False )\n",
+    "ax = recession.plot(color='grey',  linewidth=1, alpha=.6, figsize=(6,4),legend=False )\n",
     "plt.fill_between(recession.index, 0, recession.value, color='grey', alpha=.6, zorder=-100)\n",
     "\n",
-    "ax.grid(axis='x')\n",
+    "bug.format_plot(ax)\n",
     "plt.ylim(0,1)\n",
-    "plt.title('NBER based Recession Indicators for the United States')\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')"
+    "plt.title('NBER based Recession Indicators for the United States')"
    ]
   },
   {
@@ -201,20 +197,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = u.plot(figsize=(9,6), linewidth=2, color='darkred', label='unemployment')\n",
+    "ax = u.plot(figsize=(8,5), linewidth=2, color='darkred', label='unemployment')\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], augment_legend=True, legend_loc=2)\n",
     "\n",
-    "for idx, s in enumerate(starts):\n",
-    "    plt.axvspan(starts[idx], ends[idx], facecolor='grey', alpha=0.6,zorder=-100)\n",
-    "\n",
-    "\n",
-    "plt.legend()\n",
-    "ax.grid(axis='x')\n",
-    "plt.ylim(0,.18)\n",
-    "plt.title('Monthly Unemployment Rate')\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')"
+    "plt.ylim(0,.16)\n",
+    "plt.title('Monthly Unemployment Rate')"
    ]
   },
   {
@@ -335,19 +322,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = v.plot(figsize=(9,6), linewidth=2, color='darkgreen', label='vacancy')\n",
+    "ax = v.plot(figsize=(8,5), linewidth=2, color='darkgreen', label='vacancy')\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], augment_legend=True, legend_loc=2)\n",
     "\n",
-    "for idx, s in enumerate(starts):\n",
-    "    plt.axvspan(starts[idx], ends[idx], facecolor='grey', alpha=0.6,zorder=-100)\n",
-    "\n",
-    "plt.legend()\n",
-    "ax.grid(axis='x')\n",
-    "plt.ylim(0,.09)\n",
-    "plt.title('Monthly Vacancy Rate')\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')"
+    "plt.ylim(0,.08)\n",
+    "plt.title('Monthly Vacancy Rate')"
    ]
   },
   {
@@ -373,13 +352,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize = (8,8))\n",
-    "plt.plot(np.log(u), np.log(v), linewidth=1, color='darkblue')\n",
-    "\n",
-    "plt.gca().spines[\"bottom\"].set_linewidth(1.5)\n",
-    "plt.gca().spines[\"bottom\"].set_color('k')\n",
-    "plt.gca().spines[\"left\"].set_linewidth(1.5)\n",
-    "plt.gca().spines[\"left\"].set_color('k')\n",
+    "fig = plt.figure(figsize = (7,7))\n",
+    "ax = fig.add_subplot(1, 1, 1)\n",
+    "ax.plot(np.log(u), np.log(v), linewidth=1, color='navy')\n",
+    "bug.format_plot(ax, xgrid=False)\n",
     "\n",
     "plt.ylabel('Log Vacancy Rate', fontsize=12)\n",
     "plt.xlabel('Log Unemployment Rate', fontsize=12)\n",
@@ -404,20 +380,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize = (8,8))\n",
-    "plt.plot(log_u_q, log_v_q, linewidth=1,color='darkblue')\n",
+    "fig = plt.figure(figsize = (7,7))\n",
+    "ax = fig.add_subplot(1, 1, 1)\n",
+    "ax.plot(log_u_q, log_v_q, linewidth=1,color='grey')\n",
     "\n",
-    "plt.plot(log_u_q.loc['2020Q1':'2022Q1'],log_v_q.loc['2020Q1':'2022Q1'], \n",
-    "         linewidth=3, color='darkcyan', alpha=.5)\n",
+    "plt.plot(log_u_q.loc['2020Q1':],log_v_q.loc['2020Q1':], \n",
+    "         linewidth=2, color='darkred', alpha=.7, marker='o',)\n",
     "\n",
-    "plt.annotate('2020Q1', (log_u_q.loc['2020Q1'], log_v_q.loc['2020Q1']))\n",
-    "plt.annotate('2022Q1', (log_u_q.loc['2022Q1'], log_v_q.loc['2022Q1']))\n",
+    "plt.annotate('2020Q1', (log_u_q.loc['2020Q1'], log_v_q.loc['2020Q1']),)\n",
+    "plt.annotate('2020Q2', (log_u_q.loc['2020Q2'], log_v_q.loc['2020Q2']))\n",
+    "plt.annotate(str(log_u_q.index[-1]), (log_u_q.iloc[-1], log_v_q.iloc[-1]))\n",
     "\n",
-    "\n",
-    "plt.gca().spines[\"bottom\"].set_linewidth(1.5)\n",
-    "plt.gca().spines[\"bottom\"].set_color('k')\n",
-    "plt.gca().spines[\"left\"].set_linewidth(1.5)\n",
-    "plt.gca().spines[\"left\"].set_color('k')\n",
+    "bug.format_plot(ax, xgrid=False)\n",
     "\n",
     "plt.ylabel('Log Vacancy Rate', fontsize=12)\n",
     "plt.xlabel('Log Unemployment Rate', fontsize=12)\n",
@@ -451,7 +425,7 @@
    "metadata": {},
    "source": [
     "### The new data\n",
-    "OK, so what happens when we use the default B-P parameter values on our longer series 1951Q1 to 2022Q1 (length=285)?"
+    "OK, so what happens when we use the default B-P parameter values on our longer series 1951Q1 to 2022Q3 (length=287)?"
    ]
   },
   {
@@ -468,29 +442,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d25da799",
+   "id": "1ce68ede",
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "for idx, b in enumerate(bkps_default[:-1]):\n",
-    "\n",
-    "    plt.figure(figsize = (6,6))\n",
-    "    plt.plot(log_u_q, log_v_q, linewidth=1, color='grey')\n",
-    "    plt.plot(log_u_q.iloc[bkps_default[idx]:bkps_default[idx+1]],log_v_q.iloc[bkps_default[idx]:bkps_default[idx+1]], \n",
-    "             linewidth=3, color='teal')\n",
-    "    \n",
-    "    plt.annotate(str(log_u_q.index[bkps_default[idx]]), (log_u_q.iloc[bkps_default[idx]], log_v_q.iloc[bkps_default[idx]]) )\n",
-    "    plt.annotate(str(log_u_q.index[bkps_default[idx+1]-1]), (log_u_q.iloc[bkps_default[idx+1]-1], log_v_q.iloc[bkps_default[idx+1]-1] ) )\n",
-    "\n",
-    "    plt.gca().spines[\"bottom\"].set_linewidth(1.5)\n",
-    "    plt.gca().spines[\"bottom\"].set_color('k')\n",
-    "    plt.gca().spines[\"left\"].set_linewidth(1.5)\n",
-    "    plt.gca().spines[\"left\"].set_color('k')\n",
-    "    plt.ylabel('Log Vacancy Rate', fontsize=12)\n",
-    "    plt.xlabel('Log Unemployment Rate', fontsize=12)\n",
-    "    plt.title('Beveridge Curve (quarterly)', fontsize=14)"
+    "bug.plot_beveridge_curve_segments(log_u_q, log_v_q, bkps_default,)"
    ]
   },
   {
@@ -508,42 +466,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "e = bug.compute_beveridge_elasticity(u, v, bkps_in=bkps_default)"
+    "e, _ = bug.compute_beveridge_elasticity(log_u_q, log_v_q, bkps_in=bkps_default)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82ec3d04",
+   "id": "da16b67c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax= e['E'].plot(color='blueviolet', linewidth=2, figsize=(9, 6))\n",
-    "e[['LB', 'UB']].plot(ax=ax, color='blueviolet', linewidth=2,linestyle='dotted',)\n",
-    "plt.fill_between(e.index, e['UB'], e['LB'], color='blueviolet', alpha=.3)\n",
-    "\n",
-    "\n",
-    "for idx, s in enumerate(starts):\n",
-    "    plt.axvspan(starts[idx], ends[idx], facecolor='grey', alpha=0.6,zorder=-100)\n",
-    "\n",
-    "ax.grid(axis='x')\n",
-    "plt.ylim(0,2.2)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
-    "plt.ylabel('Beveridge Elasticity', fontsize=12)\n",
-    "plt.title('Beveridge Elasticity', fontsize=14)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d0406b5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "e.SE.unique().mean()"
+    "bug.plot_beveridge_elasticity_series(e, recession_dates=[starts,ends], draw_legend=True)\n",
+    "plt.ylim(0,2.2)"
    ]
   },
   {
@@ -552,14 +486,14 @@
    "metadata": {},
    "source": [
     "#### Discussion\n",
-    "So we see in the graph above, that the last period, from 2011Q3 to 2022Q1 has a really wide confidence interval. (In fact, the average std. error across all segments is 0.097.) This is because the model breakpoints are likely mis-specified. \n",
+    "So we see in the graph above, that the last period, from 2011Q3 to 2022Q3 has a really wide confidence interval. (In fact, the average std. error across all segments is 0.097.) This is because the model breakpoints are likely mis-specified. \n",
     "\n",
-    "We *KNOW* there was a huge shock to the US (and world-wide) economy due to COVID at the 2020Q2 period. It's really not reasonable to say that the time (2011Q3 to 2020Q1) and (2020Q2 to 2022Q1) are the *SAME* regime. \n",
+    "We *KNOW* there was a huge shock to the US (and world-wide) economy due to COVID at the 2020Q2 period. It's really not reasonable to say that the time (2011Q3 to 2020Q1) and (2020Q2 to 2022Q3) are the *SAME* regime. \n",
     "\n",
-    "The ONLY reason those 2 periods end up together is because of the default B-P parameterization, which does not allow a sequence as short as 8 time periods (the current post-COVID period).\n",
+    "The ONLY reason those 2 periods end up together is because of the default B-P parameterization, which does not allow a sequence as short as 10 time periods (the current post-COVID period).\n",
     "\n",
     "### Re-parameterize\n",
-    "We are going to set the min sequence length as 8, and the number of breakpoints as 6, and see if this gives us Beveridge elasticity estimates with smaller CI.\n",
+    "We are going to set the min sequence length as 10, and the number of breakpoints as 6, and see if this gives us Beveridge elasticity estimates with smaller CI.\n",
     "\n",
     "Bascially, we are guessing the B-P algorithm will identify the prior 5 breakpoints in the 1951-2019 span, and allow for the extra COVID period. "
    ]
@@ -571,45 +505,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bkps_new = bug.get_bp_breakpoints(log_u_q, log_v_q, use_bp_defaults=False,n_bkps=6, min_size=8)\n",
+    "bkps_new = bug.get_bp_breakpoints(log_u_q, log_v_q, use_bp_defaults=False,n_bkps=6, min_size=10)\n",
     "bkps_new"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ab9dbc5",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "for idx, b in enumerate(bkps_new[:-1]):\n",
-    "\n",
-    "    plt.figure(figsize = (6,6))\n",
-    "    plt.plot(log_u_q, log_v_q, linewidth=1, color='grey')\n",
-    "    plt.plot(log_u_q.iloc[bkps_new[idx]:bkps_new[idx+1]],log_v_q.iloc[bkps_new[idx]:bkps_new[idx+1]], \n",
-    "             linewidth=3, color='teal')\n",
-    "    \n",
-    "    plt.annotate(str(log_u_q.index[bkps_new[idx]]), (log_u_q.iloc[bkps_new[idx]], log_v_q.iloc[bkps_new[idx]]) )\n",
-    "    plt.annotate(str(log_u_q.index[bkps_new[idx+1]-1]), (log_u_q.iloc[bkps_new[idx+1]-1], log_v_q.iloc[bkps_new[idx+1]-1] ) )\n",
-    "\n",
-    "    plt.gca().spines[\"bottom\"].set_linewidth(1.5)\n",
-    "    plt.gca().spines[\"bottom\"].set_color('k')\n",
-    "    plt.gca().spines[\"left\"].set_linewidth(1.5)\n",
-    "    plt.gca().spines[\"left\"].set_color('k')\n",
-    "    plt.ylabel('Log Vacancy Rate', fontsize=12)\n",
-    "    plt.xlabel('Log Unemployment Rate', fontsize=12)\n",
-    "    plt.title('Beveridge Curve (quarterly)', fontsize=14)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed78879c",
+   "id": "b5d82134",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bug.plot_beveridge_curve_segments(log_u_q, log_v_q, bkps_new,)"
+   ]
   },
   {
    "cell_type": "code",
@@ -618,51 +526,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "e_new = bug.compute_beveridge_elasticity(u, v, bkps_in=bkps_new)"
+    "e_new, _ = bug.compute_beveridge_elasticity(log_u_q, log_v_q, bkps_in=bkps_new)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d730d06",
+   "id": "54180ae0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax= e_new['E'].plot(color='blueviolet', linewidth=2, figsize=(9, 6))\n",
-    "e_new[['LB', 'UB']].plot(ax=ax, color='blueviolet', linewidth=2,linestyle='dotted',)\n",
-    "plt.legend()\n",
-    "\n",
-    "for idx, s in enumerate(starts):\n",
-    "    plt.axvspan(starts[idx], ends[idx], facecolor='grey', alpha=0.6,zorder=-100)\n",
-    "\n",
-    "plt.fill_between(e_new.index, e_new['UB'], e_new['LB'], color='blueviolet', alpha=.3)\n",
-    "\n",
-    "ax.grid(axis='x')\n",
-    "plt.ylim(0,2.2)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
-    "plt.ylabel('Beveridge Elasticity', fontsize=12)\n",
-    "plt.title('Beveridge Elasticity', fontsize=14)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51ee20d9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "e_new.SE.unique().mean()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3c4dc860",
-   "metadata": {},
-   "source": [
-    "Notice the smaller confidence intervals. In fact the average std error across *ALL* segments dropped from 0.097 to 0.061!"
+    "bug.plot_beveridge_elasticity_series(e_new, recession_dates=[starts,ends], draw_legend=True)\n",
+    "plt.ylim(0,2.2)"
    ]
   },
   {
@@ -680,31 +555,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gap = bug.compute_unemployment_gap(u_q, v_q, e_new['E'])"
+    "gap = bug.compute_unemployment_gap(u_q, v_q, e_new.E)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "094165b3",
+   "id": "02cb07f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = gap.plot(color='navy', linewidth=2, figsize=(9, 6), label='unemployment gap')\n",
-    "plt.axhline(y=0, color='magenta', linewidth=2,)\n",
-    "plt.legend()\n",
-    "\n",
-    "for idx, s in enumerate(starts):\n",
-    "    plt.axvspan(starts[idx], ends[idx], facecolor='grey', alpha=0.6,zorder=-100)\n",
-    "\n",
-    "ax.grid(axis='x')\n",
-    "plt.ylim(-.02,.1)\n",
-    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
-    "ax.spines[\"bottom\"].set_color('k')\n",
-    "ax.spines[\"left\"].set_linewidth(1.5)\n",
-    "ax.spines[\"left\"].set_color('k')\n",
-    "plt.ylabel('Unemployment Gap', fontsize=12)\n",
-    "plt.title('Unemployment Gap', fontsize=14)"
+    "bug.plot_beveridge_gap_series(gap, internal_bkps=[u_q.index[b] for b in bkps_new[:-1]], \n",
+    "                              recession_dates=[starts, ends], ) \n",
+    "plt.ylim(-.02,.12)"
    ]
   },
   {
