finishing up last notebook examples

--- a/python/notebooks/07_More_on_Breakpoints_monthly_series.ipynb
+++ b/python/notebooks/07_More_on_Breakpoints_monthly_series.ipynb
@@ -249,6 +249,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ae0a0667",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Eval.f_stats_zero_v_m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "942f1801",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = KneeLocator(np.arange(1,Eval.max_bkps + 1), [x['F'] for x in Eval.f_stats_zero_v_m[1:]], curve=\"concave\", direction=\"increasing\")\n",
+    "ax = k.plot_knee()\n",
+    "plt.title('F-test: null=0 breaks, alt=m breaks')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ce3bd49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Eval.f_stats_running"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "786f4ad1",
    "metadata": {},
    "outputs": [],
@@ -343,6 +375,14 @@
    "source": [
     "bug.plot_beveridge_curve_fits(log_u, log_v, opt, coeffs, figsize=(8,8))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22d40e26",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
